--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.3",
     "@angular/cdk": "^11.1.0",
+    "@angular/cli": "~11.0.3",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
+    "@angular/compiler-cli": "~11.0.3",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
     "@angular/material": "^11.1.0",
@@ -24,6 +27,7 @@
     "@icon/icofont": "^1.0.1-alpha.1",
     "bootstrap": "^4.5.3",
     "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "mat-file-upload": "^10.0.0",
@@ -32,10 +36,12 @@
     "ngx-countdown": "^11.0.1",
     "ngx-owl-carousel-o": "^4.0.0",
     "ngx-webstorage-service": "^4.1.0",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "publitio_js_sdk": "^1.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "typescript": "~4.0.2",
     "xlsx": "^0.16.9",
     "zone.js": "~0.10.2"
   },
@@ -58,5 +64,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.11"
   }
 }
